Corrected error relating to unexpected white space before ';'

--- a/index.css
+++ b/index.css
@@ -420,7 +420,6 @@
     background-color: white;
     color: black;
     border-color: black;
-    width: ;
   }
 
   .interesting .end-page {
